# PhysicsInteractive

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.md  cmake_install.cmake  main.cpp
.github/workflows/: CMake Build Test.yml
.run/: PhysicsInteractive.run.xml
